Fixing a bug in wpm estimation and some layout improvements

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
 @import "@fontsource-variable/roboto-mono";
+@import "@fontsource/poppins/400.css";
+@import "@fontsource/poppins/500.css";
+@import "@fontsource/poppins/600.css";
+@import "@fontsource/poppins/700.css";
+@import "@fontsource/poppins/800.css";
+@import "@fontsource/poppins/900.css";
 @import "remixicon/fonts/remixicon.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
+  font-family: "Poppins", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
