--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   line-height: 1.5;
   font-weight: 400;
 
+  /* scroll-behavior: smooth; */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
